--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <h3>STUDENT REGISTRATION FORM</h3>
 
- <form action="https://formsubmit.co/gautamsingh893591@gmail.com" method="POST">
+ <form action="https://formsubmit.co/ratnaasatiya@gmail.com" method="POST">
 <table align="center" cellpadding = "10">
  
 <!----- First Name ---------------------------------------------------------->
